--- a/Page 3- Addsubject/addsubject.css
+++ b/Page 3- Addsubject/addsubject.css
@@ -10,19 +10,20 @@ body {
     height:100vh;
 }
 h2{
-    font-size:26px;
+    font-size:30px;
     width:50%;
-    background: linear-gradient(to right, #212121, #000000);  
+    background: linear-gradient(90deg,#05070ac9,#060808b0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     background-clip: text;
-    color:transparent; 
     background-size:5px;
     padding-top:4px;
     border-radius:5px;
     text-align:center;
-    text-shadow: 2px 2px 5px rgba(248, 242, 242, 0.103), 0 0 25px rgba(165, 155, 155, 0.1);
+    text-shadow: 0px 0px 5px #0a090944,0px 0px 10px #05040456;
     margin-left:115px;
     margin-top:18px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     text-decoration:double;
 }
 .form-container{
@@ -35,14 +36,16 @@ h2{
     margin-bottom:70px;
     padding:20px;
     border-radius: 10px;
-    backdrop-filter: blur(10px);
-    background: linear-gradient(to right, rgba(252, 242, 233, 0.500), rgba(236, 215, 179, 0.82));
+    background:  rgba(206, 199, 199, 0.6); 
+    box-shadow: 0 5px 15px rgba(20, 91, 191, 0.5);
+   
 }
 label {
     display:block;
     margin-bottom:8px;
     font-size:18px;
     color:#0f0d0d;
+    text-shadow: 0px 0px 5px #0a090944,0px 0px 10px #05040456;
     margin-left:85px;
     padding:10px;
     font-weight:600;
@@ -56,12 +59,21 @@ label {
     padding:10px;
     margin-top:5px;
     margin-bottom:5px;
-    font-size:14px;
-    border:1px solid #4e4a4ad7;
-    border-radius:15px;
-    background-color:#f9f9f9;
+    font-size:16px;
+    transition: all 0.4s ease;
+    border:2px solid #ddd;
+    border-radius:8px;
+    background-color:#f8f8f8;
     margin-left:83px;
 }
+.dropdown-input:focus{
+    border-color: #518bc5;
+  box-shadow: 0 0 8px rgba(58, 157, 255, 0.3);
+  background-color: #ffffff;
+}
+.dropdown-input:active {
+    transform: scale(1.02);
+  }
 .dropdown-list {
     position:absolute;
     top:100%;
@@ -81,7 +93,7 @@ label {
     cursor:pointer;
 }
 .dropdown-list div:hover {
-    background-color:#f1f1f1;
+    background-color:#7e787862;
 }
 select, input {
     width:59%;
@@ -89,14 +101,19 @@ select, input {
     margin-top:5px;
     margin-bottom:5px;
     font-size:15px;
-    border:1px solid#4e4a4ad7;
-    border-radius:10px;
-    background: linear-gradient(to right, #f9f9f9, #e6e6e6);
+    transition: all 0.4s ease;
+    border:2px solid#ddd;
+    border-radius:8px;
+    background-color: #f8f8f8;
     margin-left:83px;
 }
 select:focus, input:focus{
-    border-color:rgb(31, 31, 209);
-    outline:none;
+    border-color: #518bc5;
+    box-shadow: 0 0 8px rgba(58, 157, 255, 0.3);
+    background-color: #ffffff;
+}
+select:active, input:active{
+    transform: scale(1.02);
 }
 button{
     padding:10px 15px;
@@ -109,6 +126,7 @@ button{
     margin-right:10px;
     margin-top:35px;
     margin-left:35px;
+    transition: transform 0.3s, box-shadow 0.5s;
 }
 button[type="submit"]{
     background: linear-gradient(to right, #4CAF50, #45a049);
@@ -121,6 +139,33 @@ button[type="submit"]{
 }
 button:hover{
     opacity:0.9;
+    background: linear-gradient(to right, #b669d4, #7c9ce2);
+    transform: scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+}
+#Cancel:hover{
+opacity:0.9;
+    background: linear-gradient(to right, #b669d4, #7c9ce2);
+    transform: scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+}
+#Cancel:active{
+transform: scale(0.95);
+        background: #5b86e5;
+}
+#Addanother:hover{
+opacity:0.9;
+    background: linear-gradient(to right, #b669d4, #7c9ce2);
+    transform: scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+}
+#Addanother:active{
+    transform: scale(0.95);
+        background: #5b86e5;
+}
+button:active {
+        transform: scale(0.95);
+        background: #5b86e5;
 }
 @media(max-width:600px){
     .form-container {
